# study-tracker

./: .gitignore  README.md  database-export.sql  index.html  package-lock.json  package.json  tailwind.config.js
scripts/: export-database.sh  import-database.sh  tauri-dev-env.sh
src/: App.tsx  api.ts  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
